# back2back

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Justfile  README.md  Tiltfile  compose.yaml  pgbackup.Dockerfile
scripts/: pg-backup-s3.sh
src/: controller.rs  crd.rs  crdgen.rs  health.rs  main.rs
src/health/: mod.rs
yaml/: crd.yaml  deployment.yaml  minio-deployment.yaml  postgres-backup.yaml  postgres-deployment.yaml  postgres-francine.yaml
