[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
axum = "0.7.4"
futures = "0.3.30"
k8s-openapi = {version = "0.21.0", features = ["latest"]}
kube = {version = "0.88.1", features = ["derive", "runtime", "client"]}
schemars = "0.8.16"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
serde_yaml = "0.9.32"
thiserror = "1.0.57"
tokio = {version = "1.36.0", features = ["macros", "rt-multi-thread"]}
tower = "0.4.13"
tower-http = {version = "0.5.2", features = ["timeout", "trace"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lib]
name = "back2back_lib"
path = "src/lib.rs"

[package]
default-run = "controller"
edition = "2021"
name = "back2back"
version = "0.1.0"
